--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.62.0",
     "react-router-dom": "^6.30.1",
     "sass": "^1.90.0"
   },
