--- a/package.json
+++ b/package.json
@@ -33,5 +33,9 @@
     "npm-check-updates": "^18.0.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.40.0"
+  },
+  "dependencies": {
+    "@tanstack/react-table": "^8.21.3",
+    "react-table": "^7.8.0"
   }
 }
